# talk-booking

./: .gitignore
.github/workflows/: ci-cd.yml  ci.yml  vpc-terraform.yml
ci_cd/python/: Dockerfile
infrastructure/bootstrap/: main.tf
infrastructure/global/vpc/: .terraform.lock.hcl  ci-cd.yml  main.tf  monitoring.tf  network.tf  output.tf  security_groups.tf  tfplan  variables.tf
services/: pyproject.toml
services/talk-booking/: pyproject.toml
